updated favicon and tab title, fixed error with s in all categories being cut off by 2 pixels

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ h1 {
   border: none;
   background-color: #1EABFF;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 12px;
   height: 35px;
   /*border-radius: 0 0 0 0;*/
   cursor: pointer; 
